# Thermostat

./: CMakeLists.txt  LICENSE  README.md
src/: Thermostat.cpp  Thermostat.hpp
test/: test_Thermostat.cpp
